--- a/expense/pubspec.yaml
+++ b/expense/pubspec.yaml
@@ -31,14 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_localizations: 
-    sdk: flutter
-  intl: ^0.18.0
+  # flutter_localizations: 
+    # sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.0.0
+  
+  
+  chart_sparkline: ^1.0.13
+
+
   
   
   
